# direct-msg-serialize

./: CMakeLists.txt  Files.cmake  README.md
examples/: CMakeLists.txt  perf_test.cc  simple.cc  simple.xml  test.xml
include/: dms.h
src/: byte_array.h  common.cc  common.h  dms.cc  group_value.cc  group_value.h  memory_allocator.h  message.cc  message.h  schema.cc  schema.h  sequence_value.cc  sequence_value.h  simple_value.cc  simple_value.h  value.cc  value.h  wire_format-inl.h  wire_format.cc  wire_format.h
vsprojects/dms/: dms.sln
vsprojects/dms/libdms/: libdms.vcxproj  libdms.vcxproj.filters
